08-Troubleshooting/08-e-longway-gcp/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
        app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: nginx
        image: bitnami/nginx:1.20
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
          - name: nginx-conf
            mountPath: /opt/bitnami/nginx/conf/server_blocks
          - name: website
            mountPath: /website
      volumes:
        - name: nginx-conf
          configMap: 
            name: nginx-config
            items:
            - key: vhost.conf
              path: website-vhost.conf
        - name: website
          persistentVolumeClaim:
            claimName: nginx-website
