08-Troubleshooting/08-e-longway-gcp/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: website
spec:
  type: ClusterIP
  ports:
    # the port that this service should serve on
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: website
