08-Troubleshooting/08-e-longway-gcp/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: website
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/long-way(/|$)(.*)"
            backend:
              service:
                name: nginx
                port:
                  name: http2
